--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Cairo&display=swap');
 
 body {
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
-    font-family: sans-serif;
+    font-family: 'Cairo', sans-serif;
     padding: 20px;
 }
 
@@ -52,9 +52,11 @@ hr {
     margin-top: 25px;
 }
 
-h1,
-h2 {
+h1 {
     font-family: 'Anton', sans-serif;
+}
+h2 {
+    font-family: 'cairo', sans-serif;
 }
 
 .item p {
